# Auracite

./: .flatpak-manifest.json  .gitignore  Auracite.sln  CONTRIBUTING.md  Cargo.toml  FLATPAK.md  README.md  build.rs  generated-sources.json  index.html  zone.xiv.auracite.desktop
.github/: FUNDING.yml
.github/workflows/: main.yml
Auracite/: Auracite.csproj  Auracite.json  IStep.cs  Package.cs  Plugin.cs  StepWindow.cs  packages.lock.json
Auracite/Steps/: AdventurerPlateStep.cs  AppearanceStep.cs  EndStep.cs  InventoryStep.cs  MiscStep.cs  PlaytimeStep.cs  TitleStep.cs
dalamud/Auracite/: AdventurerPlateStep.cs  AppearanceStep.cs  Auracite.csproj  Auracite.json  CurrencyStep.cs  Dalamud.Plugin.Bootstrap.targets  EndStep.cs  IStep.cs  InventoryStep.cs  MiscStep.cs  Package.cs  PlaytimeStep.cs  Plugin.cs  StepWindow.cs  packages.lock.json
dalamud/Auracite/Steps/: AdventurerPlateStep.cs  EndStep.cs  MiscStep.cs
scripts/: build-flatpak.sh  build-web.sh  copy-web-to-server.sh
src/: data.rs  downloader.rs  html.rs  lib.rs  main.rs  package.rs  parser.rs  value.rs
templates/: character.html  plate.html
web/: index.html
