[package]
name = "auracite"
version = "0.1.0"
edition = "2024"
description = "Export your FFXIV character in portable, generic formats"
repository = "https://github.com/redstrate/Auracite"
license = "AGPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["dep:console_error_panic_hook"]

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"], default-features = false }

[dependencies]
# Used to scrape the Lodestone HTML pages
scraper = { version = "0.23" }

# Used to serialize the JSON data we export
serde = { version = "1.0", features = ["derive"], default-features = false }

# Used to do some misc regex operations during scraping
regex = { version = "1.11", default-features = false, features = ["unicode-perl"] }

# Used to generate the HTML page to easily preview your exported data
minijinja = { version = "2.11", features = ["serde"], default-features = false }

# Download files
reqwest = { version = "0.12" }

# Zip the character archive
zip = { version = "4.2", default-features = false }

# Exporting propietary game data
physis = { version = "0.4" }

# Encoding the character archive to base64 so the browser can download it and decoding the base64 images from the client
base64 = { version = "0.22", default-features = false }

# Not used directly by us, but to disable the "std" feature and is used by the scraper crate.
ahash = { version = "0.8", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
# Used to generate the WebAssembly version
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }

# For async
tokio = { version = "1.45", features = ["rt", "macros"], default-features = false }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

console_error_panic_hook = { version = "0.1", optional = true }

# to fix some dependency that doesn't enable the feature
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# For async
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"], default-features = false }

# Used for the Qt UI
cxx = { version = "1.0", default-features = false }
cxx-qt = { version = "0.7", default-features = false }
cxx-qt-lib = { version = "0.7", default-features = false }
cxx-qt-lib-extras = { version = "0.7", default-features = false }
cxx-kde-frameworks = { git = "https://invent.kde.org/libraries/cxx-kde-frameworks", branch = "master", default-features = false }

serde_json = { version = "1.0", default-features = false, features = ["std"] }
